--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@ body {
     text-align: center;
 }
 
+/* HEADER BLOCK */
 header {    
     width: 100%;
 }
 
 nav {
     display: flex;
-    padding: 0 6%;   
+    padding: 0 3.5%;   
     justify-content: space-between;
     align-items: center;
 }
@@ -32,7 +33,7 @@ nav img {
 .nav-links ul li {
     list-style: none;
     display: inline-block;
-    padding: 0px 12px;
+    padding: 0px 0.75rem;
     position: relative; 
     width: 15%; 
     text-align: center;  
@@ -41,11 +42,11 @@ nav img {
 .nav-links ul li a {
     color: black;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1,25rem;
 }
 
 .after-head {
-    padding: 2% 6%;
+    padding: 2% 3.5%;
     text-align: left;
 }
 
@@ -70,7 +71,7 @@ nav img {
 
 .form input {
     border: 1px solid #F2F2F2;   
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .form label {
@@ -79,7 +80,7 @@ nav img {
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
     color: white;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-align: center;
     padding: 5px 0;
 
@@ -153,50 +154,57 @@ h6 {
     padding: 0 0 0 0.6rem;
 }
 
-.main-hotels {
+/* ACCOMODATION AND POPULAR */
+/* .main-hotels {
     display: grid;    
     text-align: start;
-    padding: 2% 6%;
-    gap: 1rem;
+    padding: 2% 3.5%;
+    gap: 4rem;
+} */
+
+.main-hotels {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
 }
 
 #accomodation-block {
-    grid-area: a;
+    /* grid-area: a; */
+    flex: 2 1 200px;
+    margin: 2rem;
 }
 
 #popular-block {
-    grid-area: p;
-}
-
-.main-hotels div {
-    background-color: #F2F2F2;
-    border-radius: 1em;
+    /* grid-area: p; */
+    flex: 1 1 100px;
+    margin: 2rem;
 }
 
 .main-hotels div div i {
-    display: inline-block;
-    
+    display: inline-block;    
 }
 
 .holels-accomodation {
     display: flex;
     flex-wrap: wrap;    
-    justify-content: space-around;
-    align-content: space-around;
-    padding: 0.5rem;
+    justify-content: space-between;
+    align-content: space-between;
+    padding: 2rem;
 }
 
 .title-block {
-    padding: 1.5rem 0 1rem 2rem;
-    font-size: 1.5rem;
+    padding: 2rem 0 0rem 2.5rem;
+    font-size: 1.8rem;
 }
 
 .hotel-accomodation {
     width: 28%;
     height: 100%;
     background-color: white !important;
-    margin: 0.5rem;
+    margin: 0.5rem auto;
     padding: 0.5rem;
+    border-radius: 1rem;
+    /* border: 0.8em solid rgba(183, 182, 182, 0.21); */
 }
 
 .hotel-accomodation img {
@@ -205,7 +213,6 @@ h6 {
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     object-fit: cover;
-
 }
 
 .hotel-name {
@@ -214,7 +221,7 @@ h6 {
 }
 
 .night-price {
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding-bottom: 0.5rem;
 }
 
@@ -230,58 +237,120 @@ h6 {
 }
 
 #show-more {
-    padding: 1rem 0 2rem 2rem;
+    padding: 0rem 2rem 2rem 2rem;
     font-size: 1.2rem;
 }
 
-/* tablet version */
+#most-pop-head {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 2rem 0 2.5rem;
+    font-size: 1.8rem;
+}
+
+.holels-popular {
+    display: flex;
+    flex-direction: column;        
+    justify-content: space-between;
+    align-content: space-between;
+    padding: 2rem;
+}
+
+.hotel-popular {
+    display: grid;
+    grid-template-columns: 25fr 40fr;
+    max-width: 90%;    
+    background-color: white !important;
+    margin: 0.5rem auto;
+    padding: 0.5rem;
+    border-radius: 1rem;
+}
+.hotel-popular img {
+    aspect-ratio: 250/230;
+    max-height: 100%;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-bottom-left-radius: 1em;
+    object-fit: cover;
+}
+
+.text-pop {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.5rem;
+}
+
+.hotel-name-pop {
+    font-size: 1rem;
+    /* padding: 0.5rem 0; */
+}
+
+.night-price-pop {
+    font-size: 1rem;
+    /* padding-bottom: 0.5rem; */
+}
+
+
+
+/* monitor version */
 @media all and (min-width: 992px) {
     .nav-links ul li::before {
-            content: "";
-            width: 0%;
-            height: 2px;
-            background: #0065FC;
-            display: block;
-            margin: auto;
-            margin-bottom: 8px;
-            transition: o.5s;
-        }
+        content: "";
+        width: 0%;
+        height: 2px;
+        background: #0065FC;
+        display: block;
+        margin: auto;
+        margin-bottom: 8px;
+        transition: 0.5s;
+    }
     
-        .nav-links ul li:hover::before {
-            width: 100%;
-        }
-        .main-hotels {
-                    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
-                    grid-template-areas:
-                        "a a p"
-                        "a a p"
-                    ;
-                }
+    .nav-links ul li:hover::before {
+        width: 100%;
+    }
+    /* .main-hotels {
+        grid-template: repeat(2, 1fr) / repeat(3, 0,7fr);
+        grid-template-areas:
+            "a a p"
+            "a a p"
+        ;
+    } */
+    #accomodation-block,
+    #popular-block {
+        background-color: #F2F2F2;
+        border-radius: 1em;
+    }
 
 }
 
 /* tablet version */
 @media all and (min-width: 768px) and (max-width: 991px) {
     .nav-links ul li::before {
-            content: "";
-            width: 0%;
-            height: 2px;
-            background: #0065FC;
-            display: block;
-            margin: auto;
-            margin-bottom: 8px;
-            transition: o.5s;
-        }
+        content: "";
+        width: 0%;
+        height: 2px;
+        background: #0065FC;
+        display: block;
+        margin: auto;
+        margin-bottom: 8px;
+        transition: 0.5s;
+    }
     
     .nav-links ul li:hover::before {
-            width: 100%;
-        }
-    .main-hotels {
-            grid-template: repeat(2, 1fr) / repeat(3, 1fr);
-            grid-template-areas:
-                    "a a p"
-                    "a a p"
-                ;
+        width: 100%;
+    }
+    /* .main-hotels {
+        grid-template: repeat(2, 1fr) / repeat(3, 0.7fr);
+        grid-template-areas:
+            "a a p"
+            "a a p"
+        ;
+    } */
+    #accomodation-block,
+    #popular-block {
+        background-color: #F2F2F2;
+        border-radius: 1em;
     }
 }
 
@@ -304,19 +373,19 @@ h6 {
 
 
     .nav-links ul li::after {
-            content: "";
-            width: 0%;
-            height: 2px;
-            background: #0065FC;
-            display: block;
-            margin: auto;
-            margin-bottom: 8px;
-            transition: o.5s;
-        }
+        content: "";
+        width: 0%;
+        height: 2px;
+        background: #0065FC;
+        display: block;
+        margin: auto;
+        margin-bottom: 8px;
+        transition: 0.5s;
+    }
     
     .nav-links ul li:hover::after {
-            width: 100%;
-        }
+        width: 100%;
+    }
 
     #search-mob {
         display: inline-block;
@@ -325,43 +394,45 @@ h6 {
     .form label {
         display: none;
     }
+    
 
     .hotel-accomodation {
-            width: 85%;
+        width: 85%;
     }
-        .main-hotels {            
-            grid-template: 1fr / 2fr 1fr;
-        }
-    .main-hotels {
-            grid-template: repeat(6, 1fr) / 1fr;
-            grid-template-areas:
-                "p"
-                "p"
-                "a"
-                "a"
-                "a"
-                "a"
-            ;
+    .holels-accomodation, .holels-popular {
+        padding: 0;            
     }
-        #accomodation-block {
-            padding: 0;
-            background-color: white;
-        }
-    
-        #popular-block {
-            padding: 0;
-            width: 100%;
 
-        }
-        .main-hotels {
-            padding: 2% 0;
-            background-color: white;
-        }
-        .holels-accomodation {
-            padding: 0;            
-        }
-        .hotel-accomodation img {
-            aspect-ratio: 2.5/1;
-        }
+    .hotel-accomodation img {
+        aspect-ratio: 2.5/1;
+    }
+        
+    .main-hotels {
+        /* grid-template: repeat(6, 1fr) / 1fr;
+        grid-template-areas:
+            "p"
+            "p"
+            "a"
+            "a"
+            "a"
+            "a"
+        ; */
+        flex-direction: column-reverse;
+        padding: 2% 0;
+        background-color: white;
+    }
+    #accomodation-block {
+        padding: 0;
+        background-color: white;
+        margin: 0;
+    }
+        
+    #popular-block {
+        background-color: #F2F2F2;
+        padding: 0;
+        width: 100%;
+        margin: 0;
+    }
+    
 }
 
