--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ nav {
 }
 
 nav img {
-    width: 100px;    
+    width: 100px;  
+    margin-top: 1.5rem;  
 }
 
 .nav-links {
@@ -33,16 +34,22 @@ nav img {
 .nav-links ul li {
     list-style: none;
     display: inline-block;
-    padding: 0px 0.75rem;
+    padding: 0;   
     position: relative; 
-    width: 15%; 
-    text-align: center;  
+    width: auto; 
+    text-align: center;
+    margin: 0 1rem;  
 }
 
 .nav-links ul li a {
     color: black;
     text-decoration: none;
-    font-size: 1,25rem;
+    font-size: 1.25rem;
+    padding: 0 1rem;
+}
+
+#find-a-place {
+    font-size: 1.5rem;
 }
 
 .after-head {
@@ -50,134 +57,146 @@ nav img {
     text-align: left;
 }
 
-.form {
-    display: flex;
+#downtown-p {
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0.5rem 0 1rem 0;
 }
 
-.form div {
-    width: 30px;    
+.form {
+    display: flex;
+    margin: 0 0 20px 0;
+}
+
+.form div {      
     background-color: #F2F2F2;
-    border-bottom-left-radius: 6px;
-    border-top-left-radius: 6px;
+    border-bottom-left-radius: 18px;
+    border-top-left-radius: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .form div i {
-    margin: 0 auto;
-    padding: 3px 4px;    
+    margin: 0 auto;  
+    border-radius: 25px;
+    padding: 15px;    
 }
 
 .form input {
     border: 1px solid #F2F2F2;   
     font-size: 1rem;
+    font-weight: 700;
+    padding: 0 1rem 0 1rem;  
+}
+
+.form input::placeholder {
+    color: #000000;
 }
 
 .form label {
-    width: 50px;
+    
     background-color: #0065FC;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-top-right-radius: 18px;
+    border-bottom-right-radius: 18px;
     color: white;
-    font-size: 0.75rem;
+    font-size: 1rem;
+    font-weight: 600;
     text-align: center;
-    padding: 5px 0;
-
+    padding: 14px;
 }
 
 #search-mob {
     color: white;
-    background-color: #0065FC;
-    border-top-right-radius: 0.33rem;
-    border-bottom-right-radius: 0.33rem;
+    background-color: #0065FC;    
+    border-radius: 18px;
     display: none;
     position: relative;
-    left: -0.33rem;
+    left: -0.8rem;
 }
 
-
-h6 {
-    padding: 0.7rem 0 1.2rem 0;
-    font: 100;
-}
-
-.filters {
+.filtersContainer {
     display: flex;
+    width: 100%;
+    padding: 0px 10px;
+    font-weight: bold;    
+}
+
+#filters-text {
+    margin: 10px 10px 10px 0px;
+}
+
+.filterButtons {
+    padding: 0px 20px;
+    display: flex;
+    width: 100%;
     flex-wrap: wrap;
-    font: 300;
-    padding: 1rem 0;    
 }
 
-.filters button {
-    height: 2rem;
-    margin: 0 1rem;
-    padding: 0px 1rem;
+.filterButton {
+    border-style: solid;
+    border-left-style: none;
+    border-radius: 25px;
+    border-color: #f2f2f2;
     background-color: white;
-    border: 2px solid #F2F2F2;
-    border-radius: 0.8rem;
+    padding: 1px 15px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    margin: 0px 20px;
 }
 
-.filters button i {
-    height: 2rem;
-    width: 2rem;
+.filterButton i {
+    border-style: none;
+    border-radius: 25px;
+    padding: 17px;
+    color: #0065fc;
+    background-color: #deebff;
+    margin: -3px 0px;
     position: relative;
-    left: -10px;
-    top: -2px;
-    color: #0065FC;
-    
-    background-color: #DEEBFF;
-    border: 2px solid #DEEBFF;
-    border-radius: 50%;
+    right: 15px;
 }
 
-.filters div {
-    margin: 0 1rem 0 0;
-    padding: 3px 5px 3px 0;
+.filterButton:hover {
+    background-color: #deebff;
 }
 
 .info {
     display: flex;
+    margin-top: 2rem;
 }
 
 .info i {
-    border: 1px solid #F2F2F2;
-    width: 0.7rem;
-    height: 0.7rem;
+    border: 2px solid #F2F2F2;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
     color: #0065FC;
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     text-align: center;
 }
 .info p {
-    font-size: 0.7rem;
+    width: 35%;
+    font-size: 1rem;
     padding: 0 0 0 0.6rem;
 }
 
 /* ACCOMODATION AND POPULAR */
-/* .main-hotels {
-    display: grid;    
-    text-align: start;
-    padding: 2% 3.5%;
-    gap: 4rem;
-} */
-
 .main-hotels {
     display: flex;
     justify-content: space-between;
     text-align: left;
+    margin-left: 1rem;
 }
 
-#accomodation-block {
-    /* grid-area: a; */
+#accomodation-block {    
     flex: 2 1 200px;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 #popular-block {
-    /* grid-area: p; */
     flex: 1 1 100px;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 .main-hotels div div i {
@@ -189,22 +208,22 @@ h6 {
     flex-wrap: wrap;    
     justify-content: space-between;
     align-content: space-between;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .title-block {
-    padding: 2rem 0 0rem 2.5rem;
+    padding: 2rem 0 0rem 2rem;
     font-size: 1.8rem;
 }
 
 .hotel-accomodation {
     width: 28%;
-    height: 100%;
+    height: auto;
     background-color: white !important;
     margin: 0.5rem auto;
     padding: 0.5rem;
     border-radius: 1rem;
-    /* border: 0.8em solid rgba(183, 182, 182, 0.21); */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .hotel-accomodation img {
@@ -221,7 +240,7 @@ h6 {
 }
 
 .night-price {
-    font-size: 1rem;
+    font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
 
@@ -244,8 +263,8 @@ h6 {
 #most-pop-head {
     display: flex;
     justify-content: space-between;
-    padding: 1.5rem 2rem 0 2.5rem;
-    font-size: 1.8rem;
+    padding: 2rem 2rem 0 2rem;
+    font-size: 1.5rem;
 }
 
 .holels-popular {
@@ -253,17 +272,19 @@ h6 {
     flex-direction: column;        
     justify-content: space-between;
     align-content: space-between;
-    padding: 2rem;
+    padding: 1rem;
+    gap: 1rem;
 }
 
 .hotel-popular {
     display: grid;
     grid-template-columns: 25fr 40fr;
-    max-width: 90%;    
+    max-width: 88%;    
     background-color: white !important;
     margin: 0.5rem auto;
     padding: 0.5rem;
     border-radius: 1rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .hotel-popular img {
     aspect-ratio: 250/230;
@@ -282,13 +303,106 @@ h6 {
 }
 
 .hotel-name-pop {
-    font-size: 1rem;
-    /* padding: 0.5rem 0; */
+    font-size: 1rem;    
 }
 
 .night-price-pop {
+    font-size: 0.9rem;    
+}
+
+/* ACTIVITIES BLOCK */
+.title-block {
+    text-align: left;
+}
+.wrapper {
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+    margin: 2rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1 1 100px;    
+}
+
+#activities-img1, #activities-img4 {
+    aspect-ratio: 600/770;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    object-fit: cover;
+}
+
+#activities-img2 {
+    aspect-ratio: 600/360;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    object-fit: cover;
+
+}
+#activities-img3 {
+    aspect-ratio: 600/220;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    object-fit: cover;
+
+}
+#activities-img5 {
+    aspect-ratio: 600/280;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    object-fit: cover;
+
+}
+#activities-img6 {
+    aspect-ratio: 600/310;
+    max-width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    object-fit: cover;
+
+}
+
+.activities-name {
+    padding: 0.75rem;
+    text-align: left;
+}
+.post-block {   
+    border-radius: 1em;
+    min-width: 37,5rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+/* FOOTER */
+.footer-with-menu {
+    display: flex;
+    justify-content: space-around;
+    text-align: left;
+    background-color: #F2F2F2;
+    padding: 2rem;   
+    gap: 2rem; 
+}
+
+.footer-bloks {
+    width: 30%;
+}
+
+.footer-with-menu div a {
+    color: black;
+    text-decoration: none;
     font-size: 1rem;
-    /* padding-bottom: 0.5rem; */
+}
+.footer-title {
+    padding-bottom: 1rem;
+}
+.footer-list {
+    padding-bottom: 0.8rem;
 }
 
 
@@ -302,20 +416,20 @@ h6 {
         background: #0065FC;
         display: block;
         margin: auto;
-        margin-bottom: 8px;
+        margin-bottom: 2rem;
         transition: 0.5s;
     }
     
     .nav-links ul li:hover::before {
         width: 100%;
     }
-    /* .main-hotels {
-        grid-template: repeat(2, 1fr) / repeat(3, 0,7fr);
-        grid-template-areas:
-            "a a p"
-            "a a p"
-        ;
-    } */
+    .nav-links ul li:hover a{
+        color: #0065FC;
+        font-weight: 500;
+
+    }
+   
+    
     #accomodation-block,
     #popular-block {
         background-color: #F2F2F2;
@@ -333,24 +447,46 @@ h6 {
         background: #0065FC;
         display: block;
         margin: auto;
-        margin-bottom: 8px;
+        margin-bottom: 2rem;
         transition: 0.5s;
     }
     
     .nav-links ul li:hover::before {
         width: 100%;
     }
-    /* .main-hotels {
-        grid-template: repeat(2, 1fr) / repeat(3, 0.7fr);
-        grid-template-areas:
-            "a a p"
-            "a a p"
-        ;
-    } */
+    .nav-links ul li:hover a {
+        color: #0065FC;
+        font-weight: 500;
+    }
+    #most-pop-head, .title-block { 
+        padding: 1.5rem 1rem 0 1rem;
+        font-size: 1.2em;
+    }
+    #most-pop-text {
+        font-size: 1.2em;
+    }
+    .holels-popular {
+        padding: 0;
+        gap: 0.5rem;
+        padding-top: 0.8rem;
+    }
+
+    .hotel-popular img {
+        aspect-ratio: 2/3;
+        max-height: 100%;
+        max-width: 100%;
+        border-top-left-radius: 1em;
+        border-bottom-left-radius: 1em;
+        object-fit: cover;
+    }
     #accomodation-block,
     #popular-block {
         background-color: #F2F2F2;
         border-radius: 1em;
+    }
+    .column {   
+        justify-content: flex-start;
+        row-gap: 1rem;
     }
 }
 
@@ -365,26 +501,36 @@ h6 {
         width: 100%;
         display: flex;
         flex-direction: row;
+        padding-top: 1rem;
+    }
+    .nav-links ul {
+        display: flex;
+        width: 100%;
     }
     
     .nav-links ul li {
         width: 50%;
+        margin: 0;
     }
-
 
     .nav-links ul li::after {
         content: "";
-        width: 0%;
-        height: 2px;
-        background: #0065FC;
+        width: 100%;
+        height: 3px;
+        background: #F2F2F2;
         display: block;
         margin: auto;
         margin-bottom: 8px;
+        margin-top: 8px;
         transition: 0.5s;
     }
     
     .nav-links ul li:hover::after {
-        width: 100%;
+        background: #0065FC;        
+    }
+    .nav-links ul li:hover a {
+        color: #0065FC;
+        font-weight: 500;
     }
 
     #search-mob {
@@ -394,37 +540,73 @@ h6 {
     .form label {
         display: none;
     }
-    
+    .form input {            
+        padding: 0 4.5rem 0 1rem;
+    }
 
+    .filtersContainer {
+        flex-direction: column;
+        padding: 0px;
+    }
+    .filterButtons {
+        padding: 0px;
+        margin: 5px 5px 5px 0px;
+        column-gap: 1.5rem;
+    }
+    .filterButton {
+        margin: 5px 5px 5px 0px;
+    }
+
+    .filterButtons button:nth-child(1) {
+        order: 1;
+    }
+    .filterButtons button:nth-child(2) {
+        order: 3;
+    }
+    .filterButtons button:nth-child(3) {
+        order: 2;
+        padding-right: 2rem;
+    }
+    .filterButtons button:nth-child(4) {
+        order: 4;
+        padding-right: 3.5rem;
+    }
+    .info p {
+        width: 80%;
+    }
+    
+    #most-pop-head {
+        font-size: 1.5rem;
+    }
+    .title-block {
+        font-size: 1.5rem;
+    }
     .hotel-accomodation {
         width: 85%;
     }
     .holels-accomodation, .holels-popular {
-        padding: 0;            
+        padding: 0;  
+        margin: 1.5rem 0;   
+        gap: 0;       
     }
 
     .hotel-accomodation img {
         aspect-ratio: 2.5/1;
     }
         
-    .main-hotels {
-        /* grid-template: repeat(6, 1fr) / 1fr;
-        grid-template-areas:
-            "p"
-            "p"
-            "a"
-            "a"
-            "a"
-            "a"
-        ; */
+    .main-hotels {        
         flex-direction: column-reverse;
         padding: 2% 0;
         background-color: white;
+        margin-left: 0;
     }
     #accomodation-block {
         padding: 0;
         background-color: white;
         margin: 0;
+    }
+    #show-more {
+        padding-bottom: 1rem;
     }
         
     #popular-block {
@@ -433,6 +615,26 @@ h6 {
         width: 100%;
         margin: 0;
     }
-    
+    .footer-with-menu {
+        flex-direction: column;
+    }
+    .footer-bloks {
+        width: 100%;
+    }
+
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 20px;
+        margin: 2rem;
+    }
+             
+    #activities-img1, #activities-img2, #activities-img3, #activities-img4, #activities-img5, #activities-img6 {
+        aspect-ratio: 2.5/1;            
+    }
+    #block2, #block5 {
+        margin-bottom: 1rem;
+    }
 }
 
